[package]
name = "wubrag"
version = "0.1.0"
edition = "2024"

[lib]
name = "wubrag"
src = "src/lib.rs"

[dependencies]
criterion = { version = "0.7.0" , features = ["html_reports"] }
jwalk = "0.8.1"
lazy_static = "1.5.0"
rayon = "1.11.0"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-toml = "0.20.0"
walkdir = "2.5.0"

[[test]]
name = "test_document_collection"  # Name of the test binary
path = "tests/test_document_collection.rs"
harness = true 

[profile.bench]
debug = true

[[bench]]
name = "document_collection"
harness = false
