[package]
name = "wubrag"
version = "0.1.0"
edition = "2024"

[lib]
name = "wubrag"
src = "src/lib.rs"

[dependencies]
criterion = { version = "0.7.0" , features = ["html_reports"] }
fastembed = "5.2.0"
jwalk = "0.8.1"
lazy_static = "1.5.0"
rayon = "1.11.0"
tree-sitter = "0.25.10"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-cuda = "0.21.1"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-swift = "0.7.1"
walkdir = "2.5.0"

[profile.release]
debug = "line-tables-only"

[[test]]
name = "test_document_collection"  # Name of the test binary
path = "tests/test_document_collection.rs"
harness = true 

[profile.bench]
debug = true

[[bench]]
name = "end_to_end"
harness = false
[[bench]]
name = "document_collection"
harness = false
[[bench]]
name = "document_chunking"
harness = false
